...

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35000002"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/logo" />
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/editText"
        app:layout_constraintTop_toTopOf="@+id/editText">

        <ImageButton
            android:id="@+id/enterButton"
            style="@style/Widget.AppCompat.ImageButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/enter_button_bg"
            android:paddingTop="13dp"
            android:paddingBottom="13dp"
...
